<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:id="@+id/event_holder"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputAgenda"
            android:layout_width="match_parent"
            android:textColorHint="@color/white"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEventAgenda"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/text_agenda"
                android:backgroundTint="@color/white"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textParticipants"
            android:layout_width="match_parent"
            android:textColorHint="@color/white"
            android:layout_below="@+id/textInputAgenda"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etParticipants"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/text_participant"
                android:clickable="true"
                android:focusable="false"
                android:editable="false"
                android:backgroundTint="@color/white"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/llDateTime"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_below="@+id/textParticipants"
        android:layout_height="wrap_content">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputDate"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:textColorHint="@color/white"
            android:layout_below="@+id/textParticipants"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="true"
                android:layout_marginBottom="10dp"
                android:hint="@string/text_date"
                android:backgroundTint="@color/white"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textTime"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:textColorHint="@color/white"
            android:layout_below="@+id/textInputDate"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etTime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/text_time"
                android:focusable="false"
                android:clickable="true"
                android:backgroundTint="@color/white"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>



        <Button
            android:id="@+id/btnCreate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorAccent"
            android:layout_below="@+id/llDateTime"
            android:text="@string/btn_create_event"
            android:textColor="@android:color/black" />


    </RelativeLayout>
